Update and rename Tutorials 2.md to 2022-10-16-test.md

--- a/_posts/2022-10-16-test.md
+++ b/_posts/2022-10-16-test.md
@@ -1,4 +1,14 @@
+---
+title:  "Learning Prospector"
+mathjax: true
+layout: post
+categories: media
+---
+
+
 # Learning Prospector
+mathjax: true
+layout: post
 ## Alexandra Higley 
 
 This week I am going to try to use model.predict (Prospector) to model a quiessent galaxy and a star forming galaxy from UV to midinfared. Might want to mess with metalicity and dust as well. We can check to see if these work if the SEDs look take on the shape that we expect (a star forming galaxy should have no emission, but a quiessent one should.) Star forming history parameter (sfh) should be set to a delayed tau:
